# network-monitor-hub

./: .gitignore  network-monitor-nginx.conf  network-monitor-syslog.service
Log-Analyzer/: README.md  prd.md  pyproject.toml  pytest.ini  requirements.txt  tasks.md
Log-Analyzer/log_analyzer/: main.py
Log-Analyzer/log_analyzer/analysis/: analyzer_manager.py  base_analyzer.py  example_analyzers.py
Log-Analyzer/log_analyzer/core/: config.py
Log-Analyzer/log_analyzer/ingestion/: mqtt_client.py
Log-Analyzer/log_analyzer/monitoring/: metrics.py
Log-Analyzer/log_analyzer/output/: command_publisher.py
Log-Analyzer/log_analyzer/parsing/: parser.py
Log-Analyzer/log_analyzer/ui/: app.py
Log-Analyzer/log_analyzer/ui/templates/: edit_config.html  index.html  login.html
Log-Analyzer/scripts/: log-analyzer.service
Log-Analyzer/tests/: test_basic.py  test_mqtt_integration.py  test_parser.py
Network_Monitor/: .env.example  .gitignore  README.md  install_network_monitor.sh  network-monitor-nginx.conf  network-monitor-syslog.service  network-monitor-web.service  package-lock.json  requirements.txt  system_flow.md  update_network_monitor.sh  wsgi.py
Network_Monitor/backend/: config.py  wsgi.py
Network_Monitor/backend/app/: __init__.py  auth.py  cli.py
Network_Monitor/frontend/: README.md  package-lock.json  package.json
Network_Monitor/frontend/src/: App.css  App.js
Network_Monitor/migrations/versions/: 8f7d5de31e15_increase_password_hash_length.py  9509237fa4b3_initial_database_schema.py  (+1 more)
Network_Monitor/tests/: test_basic.py
(+28 files in other folders)
