[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "log_analyzer"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" }, # TODO: Update author details
]
description = "OpenWRT Log Analyzer for AI Processing"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # TODO: Choose appropriate license
    "Operating System :: OS Independent",
    "Topic :: System :: Logging",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    # Core dependencies will be listed in requirements.txt for now
    # We can consolidate later if needed
]

[project.urls]
"Homepage" = "https://github.com/yourusername/network-monitor-hub/tree/main/Log-Analyzer" # TODO: Update URL
"Bug Tracker" = "https://github.com/yourusername/network-monitor-hub/issues" # TODO: Update URL

[project.scripts]
log-analyzer = "log_analyzer.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["log_analyzer*"] 